# MatrixCalcGen

./: CMakeLists.txt  README.md
src/: Controller.cpp  Controller.h  Generator.cpp  Generator.h  MainWindow.cpp  MainWindow.h  Matrix.cpp  Matrix.h  SettingsDialog.h  main.cpp  themes.h
